# novel-writer

./: CHANGELOG.md  Trae_Doc_Generation_Guide.md  package-lock.json
novel-writer-pyside/: .env.example  .gitignore  _debug_db.py  _debug_outline.py  _test_regex.py  _test_regex2.py  alembic.ini  pyproject.toml  requirements.txt  test_crypto.py  test_crypto2.py
novel-writer-pyside/alembic/: env.py  script.py.mako
novel-writer-pyside/alembic/versions/: 0001_initial_tables.py
novel-writer-pyside/app/: config.py  main.py
novel-writer-pyside/core/ai/: ai_worker.py  analysis_service.py  audit_service.py  base.py  chat_service.py  context_manager.py  editing_service.py  error_handler.py  manager.py  retry_middleware.py  writing_service.py
novel-writer-pyside/core/di/: __init__.py  container.py
novel-writer-pyside/core/methods/: __init__.py  base.py  converter.py  (+7 more)
novel-writer-pyside/models/: __init__.py  ai_provider.py  chapter.py  character.py  database.py  plot.py  project.py
novel-writer-pyside/scripts/: migrate_to_dual_db.py
novel-writer-pyside/services/: ai_service.py  app_config_service.py  chapter_service.py  character_service.py  consistency_service.py  editor_service.py  epub_import_service.py  export_service.py  import_service.py  import_utils.py  pdf_import_service.py  plot_service.py  plugin_service.py  project_info_service.py  project_service.py  relationship_service.py  timeline_service.py  txt_import_service.py  world_service.py
novel-writer-pyside/ui/: main_window.py
novel-writer-pyside/utils/: __init__.py  crypto.py  logger.py  signal_bus.py
(+263 files in other folders)
